css/main.css
/* ... */
a.color-bg-icon:before {
	font-size: 12px;
}

a.social-icon.color-bg-icon:hover {
	background-color: #70AD47;
	color: #ffffff;
}

a.color-icon:hover {
	color: #3c3c3c;
}

a.color-icon.border-icon:hover {
	color: #ffffff;
	background-color: #70AD47;
	border-color: transparent;
}

.demo-icon {
	display: inline-block;
	text-align: center;
	border-bottom: 1px solid rgba(50, 50, 50, 0.1);
	padding: 15px 20px 30px;
	margin-bottom: 30px;
}

.demo-icon span {
	display: block;
}

.demo-icon .name {
	font-size: 1.01em;
	font-weight: 700;
}

.demo-icon a[class*="soc-"] {
	margin: 10px 0 0;
}

.demo-icon a[class*="soc-"]:before {
	font-size: 24px;
}

/*
isotope portfolio and gallery pos
*/
.gallery-item {
	text-align: center;
}

.gallery-columns-1 .gallery-item {
	width: 100%;
}

.gallery-columns-2 .gallery-item {
	width: 50%;
}

.gallery-columns-3 .gallery-item {
	width: 33.33%;
}

.gallery-columns-4 .gallery-item {
	width: 25%;
}

.gallery-columns-5 .gallery-item {
	width: 20%;
}

.gallery-columns-6 .gallery-item {
	width: 16.66%;
}

.gallery-columns-7 .gallery-item {
	width: 14.28%;
}

.gallery-columns-8 .gallery-item {
	width: 12.5%;
}

.gallery-columns-9 .gallery-item {
	width: 11.11%;
}

.gallery-icon img {
	display: block;
	margin: 0 auto;
	width: 100%;
}

.gallery-caption {
	display: block;
	padding: 0.5em;
}

.gallery-columns-6 .gallery-caption,
.gallery-columns-7 .gallery-caption,
.gallery-columns-8 .gallery-caption,
.gallery-columns-9 .gallery-caption {
	display: none;
}

@media (max-width: 600px) {
	.gallery-columns-4 .gallery-item,
  .gallery-columns-5 .gallery-item,
  .gallery-columns-6 .gallery-item,
  .gallery-columns-7 .gallery-item,
  .gallery-columns-8 .gallery-item,
  .gallery-columns-9 .gallery-item {
		width: 33%;
	}

	.gallery-columns-4 .gallery-caption,
  .gallery-columns-5 .gallery-caption,
  .gallery-columns-6 .gallery-caption,
  .gallery-columns-7 .gallery-caption,
  .gallery-columns-8 .gallery-caption,
  .gallery-columns-9 .gallery-caption {
		display: none;
	}
}

.isotope_container {
	-webkit-transition: height 0.2s ease-in-out 0s;
	transition: height 0.2s ease-in-out 0s;
}

.single-post .isotope_container {
	margin: 20px 0;
	clear: both;
}

@media (max-width: 991px) {
	.table-responsive {
		width: 100%;
		margin-bottom: 15px;
		overflow-y: hidden;
		-ms-overflow-style: -ms-autohiding-scrollbar;
	}

	.table-responsive > .table > tbody > tr > td,
  .table-responsive > .table > tbody > tr > th,
  .table-responsive > .table > tfoot > tr > td,
  .table-responsive > .table > tfoot > tr > th,
  .table-responsive > .table > thead > tr > td,
  .table-responsive > .table > thead > tr > th {
		white-space: nowrap;
	}
}

.admin-product-price input[type='number'] {
	-webkit-appearance: initial;
	-moz-appearance: initial;
}

.admin-product-price input::-webkit-outer-spin-button,
.admin-product-price input::-webkit-inner-spin-button {
	-webkit-appearance: initial;
}

.item-editable {
	position: relative;
	font-size: 0.8em;
	line-height: 1.6;
}

.item-editable h5 {
	margin-bottom: 0.3em;
}

.item-editable h6 {
	margin: 0.5em 0;
}

.item-editable .item-edit-controls {
	position: absolute;
	top: 5px;
	right: 5px;
	opacity: 0;
	background-color: rgba(255, 255, 255, 0.5);
}

.item-editable .item-edit-controls a {
	padding: 0 5px;
}

.item-editable:hover {
	background-color: rgba(100, 100, 100, 0.05);
}

.item-editable:hover .item-edit-controls {
	opacity: 1;
}

tr.item-editable .media-left img {
	max-width: 40px;
}

.dropdown .one-line-text {
	width: 250px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.panel-view-all {
	margin: 10px 0 -10px;
}

.filters-form select {
	padding-left: 15px;
	padding-right: 15px;
}

@media (max-width: 1200px) {
	.admin-table-filters .widget_search {
		max-width: 20em;
		margin-top: 15px;
	}
}

@media (min-width: 768px) {
	.admin-scroll-panel {
		height: 300px;
	}

	.admin-table-filters .filters-form {
		display: inline-block;
		margin-left: 10px;
	}

	.admin-table-filters .filters-form label {
		margin: 0 10px;
	}
}

@media (max-width: 767px) {
	.admin-table-filters .filters-form {
		margin-top: 15px;
	}

	.admin-table-filters .filters-form label {
		min-width: 6em;
	}

	.admin-table-filters .filters-form span {
		display: block;
	}

	.admin-table-filters .filters-form select {
		width: auto;
		min-width: 8em;
		display: inline-block;
		margin-bottom: 10px;
	}
}

.theme-dashboard .with_padding {
	padding: 30px;
}

.page_header_side .user-menu {
	margin-bottom: 20px;
}

.page_header_side .user-menu-media {
	float: left;
	margin-right: 15px;
}

.page_header_side .user-menu-media img {
	max-width: 40px;
	border-radius: 50%;
}

.page_header_side .user-menu-info {
	padding: 10px 0 20px;
}

.page_header_side .user-menu-info h4 {
	margin-right: 20px;
	margin-bottom: -5px;
	font-weight: inherit;
	font-size: 16px;
}

.page_header_side .user-menu-info > ul > li .activate_submenu {
	font-weight: 700;
	top: 10px;
	right: -4px;
}

.page_header_side .user-menu-info ul ul {
	padding: 0;
}

.page_header_side_sticked {
	font-size: 14px;
}

.page_header_side_sticked .mainmenu_side_wrapper h3 {
	font-size: 20px;
	text-transform: uppercase;
	margin-left: -40px;
	margin-right: -40px;
	padding: 20px 40px;
}

/* addons */
/* footer logo */
.footer-logo {
    max-width: 100%;
    height: auto;
    width: 150px; /* Adjust this value as needed */
}

@media (max-width: 768px) {
    .footer-logo {
      width: 100px; /* Adjust this value as needed for smaller screens */
    }
}

